Fixed tile picker stretching beyond bottom of page

--- a/src/app/tile-selection-menu/tile-selection-menu.component.scss
+++ b/src/app/tile-selection-menu/tile-selection-menu.component.scss
@@ -1,3 +1,8 @@
 .highlighted-tile {
-  border: 2px solid #000;
+  //border: 2px solid #000;
+  background: blue;
+}
+
+.tile {
+  width: 70px;
 }
