--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 html, body { height: 100%; }
 body { margin: 0; 
     background: #343434;
+    overflow-y: hidden;
 }
 /* Importing Bootstrap SCSS file. */
 //@import 'bootstrap/scss/bootstrap';
